ci: refactor gfortran for mac (#75)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -83,23 +83,20 @@ jobs:
         run: |
           pip install pytest-timer[termcolor]
 
-      - name: Install gfortran on Linux
+      - name: Setup symbolic link to gfortran on Linux
         if: runner.os == 'Linux'
         run: |
           sudo ln -fs /usr/bin/gfortran-9 /usr/local/bin/gfortran
           sudo ln -fs /usr/bin/gcc-9 /usr/local/bin/gcc
           sudo ln -fs /usr/bin/g++-9 /usr/local/bin/g++
 
-      - name: Install gfortran on MacOS
-        shell: bash
+      - name: Setup symbolic link to gfortran on macOS
         if: runner.os == 'macOS'
+        shell: bash
         run: |
-          brew cask info gfortran
-          brew cask install gfortran
-          ls -l /usr/local/gfortran/bin/
-          sudo ln -fs /usr/local/gfortran/bin/gfortran /usr/local/bin/gfortran
-          sudo ln -fs /usr/local/gfortran/bin/gcc /usr/local/bin/gcc
-          sudo ln -fs /usr/local/gfortran/bin/g++ /usr/local/bin/g++
+          sudo ln -fs /usr/local/bin/gfortran-9 /usr/local/bin/gfortran
+          sudo ln -fs /usr/local/bin/gcc-9 /usr/local/bin/gcc
+          sudo ln -fs /usr/local/bin/g++-9 /usr/local/bin/g++
 
       - name: Print GNU compiler versions
         run: |
