--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: pymake continuous integration
 
 on:
   push:
-    branches: [master]
+    branches: [ master ]
   pull_request:
 
 jobs:
@@ -41,20 +41,18 @@ jobs:
       - name: Run pylint
         run: pylint --jobs=0 --errors-only ./pymake
 
-  pymakeCI:
-    name: Run pymake CI on different python versions and different OSs
+  pymakeCI-os:
+    name: Run pymake CI on different OSs
     needs: pymake_lint
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.6, 3.7, 3.8]
-        os: [ubuntu-latest]
-        include:
-          - os: macos-latest
-            python-version: 3.8
-          - os: windows-latest
-            python-version: 3.8
+        python-version: 3.8
+        os: [ ubuntu-latest, macos-latest, windows-latest ]
+    defaults:
+      run:
+        shell: bash
 
     steps:
       - name: Checkout repo
@@ -71,12 +69,7 @@ jobs:
 
       - name: Install python packages
         run: |
-          python -m pip install --upgrade pip
-          pip install .
-          pip install pytest pytest-cov coverage
-          pip install pydotplus appdirs
-          pip install matplotlib
-          pip install https://github.com/modflowpy/flopy/zipball/develop
+          .github/common/install-python.sh
 
       - name: Setup symbolic link to gfortran on Linux
         if: runner.os == 'Linux'
@@ -87,7 +80,6 @@ jobs:
 
       - name: Setup symbolic link to gfortran on macOS
         if: runner.os == 'macOS'
-        shell: bash
         run: |
           sudo ln -fs /usr/local/bin/gfortran-10 /usr/local/bin/gfortran
           sudo ln -fs /usr/local/bin/gcc-10 /usr/local/bin/gcc
@@ -100,19 +92,14 @@ jobs:
           g++ --version
 
       - name: Download examples for pytest runs
-        shell: bash
         run: |
-          cd autotest
-          python ci_setup.py
-          cd ..
+          .github/common/download-examples.sh
 
       - name: Run pytest
-        shell: bash
         run: |
           pytest -v --durations=0 --cov=pymake --cov-report=xml autotest/
 
       - name: Print coverage report before upload
-        shell: bash
         run: |
           coverage report
 
@@ -121,9 +108,117 @@ jobs:
         with:
           file: ./coverage.xml
 
+  pymakeCI-gcc9:
+    name: Run pymake CI on different OSs
+    needs: pymake_lint
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: 3.8
+    defaults:
+      run:
+        shell: bash
+
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v2.3.4
+
+      - name: Setup Graphviz
+        if: runner.os == 'Linux'
+        uses: ts-graphviz/setup-graphviz@v1
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install python packages
+        run: |
+          .github/common/install-python.sh
+
+      - name: Setup symbolic link to gfortran on Linux
+        if: runner.os == 'Linux'
+        run: |
+          sudo ln -fs /usr/bin/gfortran-9 /usr/local/bin/gfortran
+          sudo ln -fs /usr/bin/gcc-9 /usr/local/bin/gcc
+          sudo ln -fs /usr/bin/g++-9 /usr/local/bin/g++
+
+      - name: Print GNU compiler versions
+        run: |
+          gfortran --version
+          gcc --version
+          g++ --version
+
+      - name: Download examples for pytest runs
+        run: |
+          .github/common/download-examples.sh
+
+      - name: Run pytest
+        run: |
+          pytest -v --durations=0 --cov=pymake --cov-report=xml autotest/
+
+      - name: Print coverage report before upload
+        run: |
+          coverage report
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v1.0.15
+        with:
+          file: ./coverage.xml
+
+  pymakeCI-python:
+    name: Run pymake CI on different OSs
+    needs: pymake_lint
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: [ 3.7, 3.6 ]
+    defaults:
+      run:
+        shell: bash
+
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v2.3.4
+
+      - name: Setup Graphviz
+        uses: ts-graphviz/setup-graphviz@v1
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install python packages
+        run: |
+          .github/common/install-python.sh
+
+      - name: Setup symbolic link to gfortran on Linux
+        if: runner.os == 'Linux'
+        run: |
+          sudo ln -fs /usr/bin/gfortran-10 /usr/local/bin/gfortran
+          sudo ln -fs /usr/bin/gcc-10 /usr/local/bin/gcc
+          sudo ln -fs /usr/bin/g++-10 /usr/local/bin/g++
+
+      - name: Print GNU compiler versions
+        run: |
+          gfortran --version
+          gcc --version
+          g++ --version
+
+      - name: Download examples for pytest runs
+        run: |
+          .github/common/download-examples.sh
+
+      - name: Run pytest
+        run: |
+          pytest -v --durations=0
+
   pymake_rtd:
     name: pymake rtd
-    needs: pymakeCI
+    needs: pymakeCI-os
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
