--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest]
+        os: [ ubuntu-latest ]
 
     if: github.repository_owner == 'modflowpy'
     steps:
@@ -43,14 +43,14 @@ jobs:
       - name: Run pylint
         run: pylint --jobs=0 --errors-only ./pymake
 
-  pymakeCI-os:
+  pymakeCI-os-gcc:
     name: Run pymake CI on different OSs
     needs: pymake_lint
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.8]
+        python-version: [ 3.8 ]
         os: [ ubuntu-latest, macos-latest, windows-latest ]
     defaults:
       run:
@@ -111,13 +111,14 @@ jobs:
           file: ./coverage.xml
 
   pymakeCI-gcc9:
-    name: Run pymake CI on different OSs
+    name: Run pymake CI with GCC-9
     needs: pymake_lint
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.8]
+        python-version: [ 3.8 ]
+        gcc-version: [ 9, 8 ]
     defaults:
       run:
         shell: bash
@@ -140,11 +141,10 @@ jobs:
           .github/common/install-python.sh
 
       - name: Setup symbolic link to gfortran on Linux
-        if: runner.os == 'Linux'
         run: |
-          sudo ln -fs /usr/bin/gfortran-9 /usr/local/bin/gfortran
-          sudo ln -fs /usr/bin/gcc-9 /usr/local/bin/gcc
-          sudo ln -fs /usr/bin/g++-9 /usr/local/bin/g++
+          sudo ln -fs /usr/bin/gfortran-${{ matrix.gcc-version }} /usr/local/bin/gfortran
+          sudo ln -fs /usr/bin/gcc-${{ matrix.gcc-version }} /usr/local/bin/gcc
+          sudo ln -fs /usr/bin/g++-${{ matrix.gcc-version }} /usr/local/bin/g++
 
       - name: Print GNU compiler versions
         run: |
@@ -170,13 +170,13 @@ jobs:
           file: ./coverage.xml
 
   pymakeCI-python:
-    name: Run pymake CI on different OSs
+    name: Run pymake CI with different python versions
     needs: pymake_lint
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        python-version: [ 3.7, 3.6 ]
+        python-version: [ 3.7 ]
     defaults:
       run:
         shell: bash
