feat(targets): add compiler option for mt3dms, seawat, gsflow w/ gfortran-10
closes #81

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -220,7 +220,7 @@ jobs:
 
   pymake_rtd:
     name: pymake rtd
-    needs: pymakeCI-os
+    needs: pymakeCI-os-gcc
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
