--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,11 +9,7 @@ jobs:
 
   pymake_lint:
     name: pymake linting
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ ubuntu-latest ]
+    runs-on: ubuntu-latest
 
     if: github.repository_owner == 'modflowpy'
     steps:
@@ -44,13 +40,12 @@ jobs:
         run: pylint --jobs=0 --errors-only ./pymake
 
   pymakeCI-os-gcc:
-    name: Run pymake CI on different OSs
+    name: pymake CI on different OSs
     needs: pymake_lint
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
-        python-version: [ 3.8 ]
         os: [ ubuntu-latest, macos-latest, windows-latest ]
     defaults:
       run:
@@ -67,7 +62,7 @@ jobs:
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: 3.8
 
       - name: Install python packages
         run: |
@@ -111,13 +106,12 @@ jobs:
           file: ./coverage.xml
 
   pymakeCI-gcc9:
-    name: Run pymake CI with GCC-9
+    name: pymake CI with GCC-9
     needs: pymake_lint
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        python-version: [ 3.8 ]
         gcc-version: [ 9, 8 ]
     defaults:
       run:
@@ -131,10 +125,10 @@ jobs:
         if: runner.os == 'Linux'
         uses: ts-graphviz/setup-graphviz@v1
 
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: 3.8
 
       - name: Install python packages
         run: |
@@ -170,7 +164,7 @@ jobs:
           file: ./coverage.xml
 
   pymakeCI-python:
-    name: Run pymake CI with different python versions
+    name: pymake CI with different python versions
     needs: pymake_lint
     runs-on: ubuntu-latest
     strategy:
