feat(pymake): add overide of fc and cc if FC and CC are enviro. vars.
Added intel compilers as a GH actions step. Add scheduled run every
Wednesday at 3 AM UTC.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,8 @@
 name: pymake continuous integration
 
 on:
+  schedule:
+    - cron: '0 3 * * 3' # run at 3 AM UTC every Wednesday
   push:
     branches: [ master ]
   pull_request:
