feat(pymake): add overide of fc and cc if FC and CC are enviro. vars.
Added intel compilers as a GH actions step. Add scheduled run every
Wednesday at 3 AM UTC.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -114,8 +114,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ ubuntu-latest, macos-latest, windows-latest ]
-        os_script: [ifortvars_linux.sh, ifortvars_macos.sh, ifortvars_windows.bat]
+        include:
+          - os: ubuntu-latest
+            os_script: ifortvars_linux.sh
+          - os: macos-latest
+            os_script: ifortvars_macos.sh
+          - os: windows-latest
+            os_script: ifortvars_windows.bat
     defaults:
       run:
         shell: bash
