feat(pymake): add overide of fc and cc if FC and CC are enviro. vars.
Added intel compilers as a GH actions step. Add scheduled run every
Wednesday at 3 AM UTC.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -342,6 +342,8 @@ jobs:
     name: pymake rtd
     needs: pymakeCI-os-gcc
     runs-on: ubuntu-latest
+    if:
+      github.event_name == 'push'
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2.3.4
