feat(pymake): add overide of fc and cc if FC and CC are enviro. vars.
Added intel compilers as a GH actions step. Add scheduled run every
Wednesday at 3 AM UTC. Add custom pytest mark to exclude a number of
tests (exe test model runs) from all but the base workflow test that
runs with current GNU compilers on linux, macOS, and Windows.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -96,7 +96,7 @@ jobs:
 
       - name: Run pytest
         run: |
-          pytest -v --durations=0 --cov=pymake --cov-report=xml autotest/
+          pytest -v --runall --durations=0 --cov=pymake --cov-report=xml autotest/
 
       - name: Print coverage report before upload
         run: |
