--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -139,10 +139,6 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v2.3.4
 
-      - name: Setup Graphviz
-        if: runner.os == 'Linux'
-        uses: ts-graphviz/setup-graphviz@v1
-
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
@@ -231,8 +227,8 @@ jobs:
         run: |
           .github/intel-scripts/cache_exclude_linux.sh
 
-  pymakeCI-gcc9:
-    name: pymake CI GCC-9
+  pymakeCI-gcc-prev:
+    name: pymake CI GCC 9 and 8
     needs: pymake_lint
     runs-on: ubuntu-latest
     strategy:
@@ -246,10 +242,6 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2.3.4
-
-      - name: Setup Graphviz
-        if: runner.os == 'Linux'
-        uses: ts-graphviz/setup-graphviz@v1
 
       - name: Set up Python
         uses: actions/setup-python@v2
@@ -289,8 +281,8 @@ jobs:
         with:
           file: ./coverage.xml
 
-  pymakeCI-python:
-    name: pymake CI with different python versions
+  pymakeCI-python-prev:
+    name: pymake CI with previous python versions
     needs: pymake_lint
     runs-on: ubuntu-latest
     strategy:
@@ -304,9 +296,6 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2.3.4
-
-      - name: Setup Graphviz
-        uses: ts-graphviz/setup-graphviz@v1
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
