--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -96,7 +96,7 @@ jobs:
 
       - name: Run pytest
         run: |
-          pytest -v --runall --durations=0 --cov=pymake --cov-report=xml autotest/
+          pytest -v -m regression --durations=0 --cov=pymake --cov-report=xml autotest/
 
       - name: Print coverage report before upload
         run: |
@@ -138,6 +138,10 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2.3.4
+
+      - name: Setup Graphviz
+        if: runner.os == 'Linux'
+        uses: ts-graphviz/setup-graphviz@v1
 
       - name: Set up Python
         uses: actions/setup-python@v2
@@ -243,6 +247,9 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v2.3.4
 
+      - name: Setup Graphviz
+        uses: ts-graphviz/setup-graphviz@v1
+
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
@@ -270,7 +277,41 @@ jobs:
 
       - name: Run pytest
         run: |
-          pytest -v --durations=0 --cov=pymake --cov-report=xml autotest/
+          pytest -v -m regression --durations=0 --cov=pymake --cov-report=xml autotest/
+
+      - name: Print coverage report before upload
+        run: |
+          coverage report
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v1.0.15
+        with:
+          file: ./coverage.xml
+
+  pymakeCI-requests:
+    name: pymake CI requests
+    needs: pymake_lint
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
+
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v2.3.4
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+
+      - name: Install python packages
+        run: |
+          .github/common/install-python.sh
+
+      - name: Run pytest
+        run: |
+          pytest -v -m requests --durations=0 --cov=pymake --cov-report=xml autotest/
 
       - name: Print coverage report before upload
         run: |
@@ -325,7 +366,7 @@ jobs:
 
       - name: Run pytest
         run: |
-          pytest -v --durations=0
+          pytest -v -m base --durations=0
 
   pymake_rtd:
     name: pymake rtd
