refactor(dag): add NetworkX python package as DAG option
Modified makefile generation to remove date and time so that changes
to makefiles are limited to source file name and dependency changes.
Refactored setup.py to a more modern format. Bumped version number
to 1.2.1. Black formatting. Added test of standard installation.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = pymake
+name = mfpymake
 version = attr: pymake.config.__version__
 description = pymake is a Python package to compile MODFLOW-based models.
 long_description = attr: pymake.config.__description__
