--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,10 @@
 # Exclude files
-global-exclude .DS_Store *.pyc *.pyo *.pyd *.swp *.bak *~ .* *.sh *.yml
+global-exclude .DS_Store *.pyc *.pyo *.pyd *.swp *.bak *~ .* *.sh *.yml *.md *.toml
 prune */__pycache__
+# exclude directories
+exclude docs/*
+exclude autotest/*
 # include specific files
 include pymake/utils/usgsprograms.txt
-recursive-include example *.py *.bat
+include pymake/examples/*.bat
+include pymake/examples/*.py
