--- a/setup.cfg
+++ b/setup.cfg
@@ -2,11 +2,12 @@
 name = mfpymake
 version = attr: pymake.config.__version__
 description = pymake is a Python package to compile MODFLOW-based models.
-long_description = attr: pymake.config.__description__
-author = attr: pymake.config.__author__
+long_description = file: README.md
+long_description_content_type = text/markdown
+author = attr: Joseph D. Hughes
 author_email = modflow@usgs.gov
-maintainer = attr: pymake.config.__maintainer__
-maintainer_email = attr: pymake.config.__email__
+maintainer = attr: Joseph D. Hughes
+maintainer_email = jdhughes@usgs.gov
 license = CC0
 license_files = LICENSE, LICENSE.md
 platform = Windows, Mac OS-X, Linux
@@ -28,7 +29,7 @@ project_urls =
 [options]
 include_package_data = True  # includes files listed in MANIFEST.in
 zip_safe = False
-packages = find:
+packages = pymake
 python_requires = >=3.7
 install_requires =
     numpy >= 1.15.0
