--- a/setup.cfg
+++ b/setup.cfg
@@ -34,7 +34,7 @@ python_requires = >=3.7
 install_requires =
     numpy >= 1.15.0
     requests
-    networkx
+    networkx >= 2.6.3
 
 [sdist]
 formats = zip
