fix(setup.cfg): use 'find:' to include submodules; other tidying

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,12 +4,11 @@ version = attr: pymake.config.__version__
 description = pymake is a Python package to compile MODFLOW-based models.
 long_description = file: README.md
 long_description_content_type = text/markdown
-author = attr: Joseph D. Hughes
+author = Joseph D. Hughes
 author_email = modflow@usgs.gov
-maintainer = attr: Joseph D. Hughes
+maintainer = Joseph D. Hughes
 maintainer_email = jdhughes@usgs.gov
 license = CC0
-license_files = LICENSE, LICENSE.md
 platform = Windows, Mac OS-X, Linux
 keywords = MODFLOW, groundwater, hydrogeology
 classifiers =
@@ -29,15 +28,13 @@ project_urls =
 [options]
 include_package_data = True  # includes files listed in MANIFEST.in
 zip_safe = False
-packages = pymake
+packages = find:
 python_requires = >=3.7
 install_requires =
     numpy >= 1.15.0
     requests
     networkx
 
-[sdist]
-formats = zip
 
 [flake8]
 exclude =
