feat(makefile): unix newline and line endings in win32 makefiles
Add check in NetworkX generated DAG that it is acyclic (no circular
references). Add minimum NetworkX version >= 2.6.3.
Bump version to 1.2.3

--- a/setup.cfg
+++ b/setup.cfg
@@ -35,6 +35,9 @@ install_requires =
     requests
     networkx >= 2.6.3
 
+[options.package_data]
+pymake.utils.data =  pymake/utils/usgsprograms.txt
+
 
 [flake8]
 exclude =
