feat(makefile): unix newline and line endings in win32 makefiles (#100)
Add check in NetworkX generated DAG that it is acyclic (no circular
references). Add minimum NetworkX version >= 2.6.3.
Bump version to 1.2.3

Co-authored-by: Mike Taves <mwtoews@gmail.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,7 +33,10 @@ python_requires = >=3.7
 install_requires =
     numpy >= 1.15.0
     requests
-    networkx
+    networkx >= 2.6.3
+
+[options.package_data]
+pymake.utils.data =  pymake/utils/usgsprograms.txt
 
 
 [flake8]
