--- a/setup.cfg
+++ b/setup.cfg
@@ -36,8 +36,7 @@ install_requires =
     networkx >= 2.6.3
 
 [options.package_data]
-pymake.utils.data =  pymake/utils/usgsprograms.txt
-
+pymake = utils/usgsprograms.txt
 
 [flake8]
 exclude =
@@ -48,9 +47,9 @@ exclude =
     examples
     autotest
 ignore =
-    # https://flake8.pycqa.org/en/latest/user/error-codes.html
+# https://flake8.pycqa.org/en/latest/user/error-codes.html
     F401 # 'module' imported but unused
-    # https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes
+# https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes
     E121 # continuation line under-indented for hanging indent
     E122 # continuation line missing indentation or outdented
     E126 # continuation line over-indented for hanging indent
