--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,8 @@ install_requires =
     numpy >= 1.15.0
     requests
     networkx >= 2.6.3
+    meson
+    ninja
 
 [options.package_data]
 pymake = utils/usgsprograms.txt
