feat(meson): add meson build option
Replace .format() with f-strings using flynt. Use isort to clean-up
package imports.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -83,7 +83,7 @@ jobs:
 
       - name: Base pymake installation
         run: |
-          pip install . --use-feature=in-tree-build
+          pip install .
 
       - name: Print pymake version
         run: |
