feat(meson): add meson build option
Replace .format() with f-strings using flynt. Use isort to clean-up
package imports.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,7 +71,7 @@ jobs:
       - name: Checkout pymake repo
         uses: actions/checkout@v2.3.4
 
-      - name: Setup Python 3.9
+      - name: Setup Python
         uses: actions/setup-python@v2.2.2
         with:
           python-version: 3.9
@@ -83,7 +83,7 @@ jobs:
 
       - name: Base pymake installation
         run: |
-          pip install .
+          pip --verbose install .
 
       - name: Print pymake version
         run: |
