--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,8 +32,23 @@ jobs:
           pip install https://github.com/modflowpy/flopy/zipball/develop
           pip install pylint flake8 black
 
+      - name: Run isort
+        run: |
+          echo "if isort check fails update isort using"
+          echo "  pip install isort --upgrade"
+          echo "and run"
+          echo "  isort ./flopy"
+          echo "and then commit the changes."
+          isort --verbose --check --diff ./pymake
+
       - name: Run black
-        run: black --check --line-length 79 ./pymake
+        run: |
+          echo "if black check fails update black using"
+          echo "  pip install black --upgrade"
+          echo "and run"
+          echo "  black ./flopy"
+          echo "and then commit the changes."
+          black --check --diff ./pymake
 
       - name: Run flake8
         run: flake8 --count --show-source ./pymake
@@ -56,7 +71,7 @@ jobs:
       - name: Checkout pymake repo
         uses: actions/checkout@v2.3.4
 
-      - name: Setup Python 3.9
+      - name: Setup Python
         uses: actions/setup-python@v2.2.2
         with:
           python-version: 3.9
@@ -68,7 +83,7 @@ jobs:
 
       - name: Base pymake installation
         run: |
-          pip install . --use-feature=in-tree-build
+          pip --verbose install .
 
       - name: Print pymake version
         run: |
@@ -152,7 +167,7 @@ jobs:
             os_script: ifortvars_linux.sh
           - os: macos-latest
             os_script: ifortvars_macos.sh
-          - os: windows-latest
+          - os: windows-2019
             os_script: ifortvars_windows.bat
     defaults:
       run:
