--- a/setup.cfg
+++ b/setup.cfg
@@ -31,9 +31,11 @@ zip_safe = False
 packages = find:
 python_requires = >=3.7
 install_requires =
-    numpy >= 1.15.0
+    numpy
     requests
     networkx >= 2.6.3
+    meson
+    ninja
 
 [options.package_data]
 pymake = utils/usgsprograms.txt
