fix(makefile): add makefile support for shared objects
closes #104

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -414,7 +414,7 @@ jobs:
 
       - name: Run pytest
         run: |
-          pytest -v -m base --durations=0
+          pytest -v --dist=loadscope -n=auto -m base --durations=0
 
   pymake_rtd:
     name: pymake rtd
