--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -144,7 +144,7 @@ jobs:
 
       - name: Run pytest
         run: |
-          pytest -v -m regression --durations=0 --cov=pymake --cov-report=xml autotest/
+          pytest -v --dist=loadscope -n=auto -m regression --durations=0 --cov=pymake --cov-report=xml autotest/
 
       - name: Print coverage report before upload
         run: |
@@ -325,7 +325,7 @@ jobs:
 
       - name: Run pytest
         run: |
-          pytest -v -m regression --durations=0 --cov=pymake --cov-report=xml autotest/
+          pytest -v --dist=loadscope -n=auto -m regression --durations=0 --cov=pymake --cov-report=xml autotest/
 
       - name: Print coverage report before upload
         run: |
@@ -359,7 +359,7 @@ jobs:
 
       - name: Run pytest
         run: |
-          pytest -v -m requests --durations=0 --cov=pymake --cov-report=xml autotest/
+          pytest -v --dist=loadscope -n=auto -m requests --durations=0 --cov=pymake --cov-report=xml autotest/
 
       - name: Print coverage report before upload
         run: |
@@ -414,7 +414,7 @@ jobs:
 
       - name: Run pytest
         run: |
-          pytest -v -m base --durations=0
+          pytest -v --dist=loadscope -n=auto -m base --durations=0
 
   pymake_rtd:
     name: pymake rtd
