ci: parallel pytest with oneAPI

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -256,8 +256,10 @@ jobs:
         if: runner.os == 'Windows'
         env:
           CC: icl
+        shell: cmd
         run: |
-          .github/intel-scripts/${{ matrix.os_script }}
+          call ".github/intel-scripts/ifortvars_windows.bat"
+          pytest -v -m regression --durations=0 --cov=pymake --cov-report=xml autotest/
 
       - name: Print coverage report before upload
         run: |
