--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,7 @@ install_requires =
     networkx >= 2.6.3
     meson
     ninja
+    pydotplus
 
 [options.package_data]
 pymake = utils/usgsprograms.txt
