fix(setup,linting): fix issues related to changes in setup and pylint

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,6 @@
 [metadata]
 name = mfpymake
 version = attr: pymake.config.__version__
-license = CC0
 description = pymake is a Python package to compile MODFLOW-based models.
 long_description = file: README.md, LICENSE.md
 long_description_content_type = text/markdown
@@ -9,6 +8,8 @@ author = Joseph D. Hughes
 author_email = modflow@usgs.gov
 maintainer = Joseph D. Hughes
 maintainer_email = jdhughes@usgs.gov
+license = CC0
+license_files = LICENSE.md
 platform = Windows, Mac OS-X, Linux
 keywords = MODFLOW, groundwater, hydrogeology
 classifiers =
