--- a/.github/workflows/pymake-rtd.yml
+++ b/.github/workflows/pymake-rtd.yml
@@ -6,7 +6,8 @@ on:
   push:
     branches: [ master ]
   pull_request:
-
+    branches:
+      - develop
 jobs:
 
   pymake_rtd:
@@ -16,7 +17,7 @@ jobs:
       github.event_name == 'push'
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v2.3.4
+        uses: actions/checkout@v2.5.0
 
       - name: Trigger RTDs build
         if: github.ref == 'refs/heads/master'
