Update intel OneAPI compilers
Update CI

--- a/setup.cfg
+++ b/setup.cfg
@@ -59,6 +59,8 @@ ignore =
     E722
     # ambiguous variable name
     E741
+    # whitespace before ':'
+    E203
     # line break before binary operator
     W503
 statistics = True
