feat(make-program): add make-program to replace scripts in examples.

--- a/setup.cfg
+++ b/setup.cfg
@@ -42,6 +42,10 @@ install_requires =
 [options.package_data]
 pymake = utils/usgsprograms.txt
 
+[options.entry_points]
+console_scripts =
+    make-program = pymake.cmds.build:main
+
 [flake8]
 exclude =
     .git
