use pytest temp dirs (WIP), define test reqs in extras group in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -39,6 +39,24 @@ install_requires =
     ninja
     pydotplus
 
+[options.extras_require]
+lint =
+    black
+    cffconvert
+    flake8
+    isort
+    pylint
+test =
+    %(lint)s
+    appdirs
+    coverage
+    flaky
+    graphviz
+    matplotlib
+    pytest
+    pytest-cov
+    pytest-xdist
+
 [options.package_data]
 pymake = utils/usgsprograms.txt
 
