feat(make-program): add make-program to replace scripts in examples.

--- a/setup.cfg
+++ b/setup.cfg
@@ -45,6 +45,7 @@ pymake = utils/usgsprograms.txt
 [options.entry_points]
 console_scripts =
     make-program = pymake.cmds.build:main
+    make-code-json = pymake.cmds.createjson:main
 
 [flake8]
 exclude =
