--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -112,13 +112,13 @@ jobs:
       - name: test on Linux and MacOS
         if: runner.os != 'Windows'
         run: |
-          pytest -v -n=auto --dist=loadfile -m=regression --durations=0 --cov=pymake --cov-report=xml autotest/
+          pytest -v -n=auto --dist=loadfile -m="base or regression" --durations=0 --cov=pymake --cov-report=xml autotest/
 
       - name: test on Windows
         if: runner.os == 'Windows'
         shell: cmd
         run: |
-          pytest -v -m=base --durations=0 --cov=pymake --cov-report=xml autotest/
+          pytest -v -m="base or regression" --durations=0 --cov=pymake --cov-report=xml autotest/
 
       - name: Print coverage report before upload
         run: |
